--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     hostname: api01
     environment:
       - WEB_CONCURRENCY=0
-      - RAILS_MAX_THREADS=5
+      - RAILS_MAX_THREADS=10
       - PORT=3001
       - DB_HOSTNAME=db
       - RINHA_DE_BACKEND_DATABASE_PASSWORD=postgres
@@ -20,13 +20,13 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.3"
-          memory: "200MB"
+          cpus: "0.4"
+          memory: "150MB"
 
   api02:
     <<: *api
     environment:
-      - WEB_CONCURRENCY=0
+      - WEB_CONCURRENCY=2
       - RAILS_MAX_THREADS=5
       - PORT=3002
       - DB_HOSTNAME=db
@@ -37,6 +37,11 @@ services:
     ports:
       - "3002:3002"
     hostname: api02
+    deploy:
+      resources:
+        limits:
+          cpus: "0.4"
+          memory: "250MB"
 
   nginx:
     image: nginx:latest
@@ -50,7 +55,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.2"
+          cpus: "0.1"
           memory: "60MB"
 
   db:
@@ -65,7 +70,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.7"
+          cpus: "0.6"
           memory: "90MB"
 
 networks:
