changes nginx and postgresql.conf

--- a/postgresql.conf
+++ b/postgresql.conf
@@ -1,16 +1,8 @@
-# WARNING
-# this tool not being optimal
-# for low memory systems
-
-# DB Version: 16
-# OS Type: linux
-# DB Type: web
-# Total Memory (RAM): 90 MB
-# CPUs num: 1
-# Connections num: 20
-# Data Storage: ssd
 listen_addresses = '*'
 
-# For profilling
-# shared_preload_libraries = 'pg_stat_statements'
-# pg_stat_statements.track = all
+# RESOURCE USAGE
+max_connections = 30
+
+# QUERY TUNING
+random_page_cost = 1.1
+effective_io_concurrency = 30
