--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3.5"
 
+x-environments: &env
+  WEB_CONCURRENCY: 0
+  RAILS_MAX_THREADS: 10
+  RAILS_LOG_LEVEL: ERROR
+  DB_HOSTNAME: host.docker.internal
+  RINHA_DE_BACKEND_DATABASE_PASSWORD: postgres
+  RAILS_MASTER_KEY: e6b1e1bd647883d4e9a2ee298c45b0e3
+
 services:
   api01: &api
     build:
@@ -7,12 +15,8 @@ services:
       dockerfile: Dockerfile
     hostname: api01
     environment:
-      - WEB_CONCURRENCY=0
-      - RAILS_MAX_THREADS=10
-      - PORT=3001
-      - DB_HOSTNAME=host.docker.internal
-      - RINHA_DE_BACKEND_DATABASE_PASSWORD=postgres
-      - RAILS_MASTER_KEY=e6b1e1bd647883d4e9a2ee298c45b0e3
+      <<: *env
+      PORT: 3001
     depends_on:
       - db
     ports:
@@ -22,27 +26,17 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.3"
-          memory: "120MB"
+          cpus: "0.45"
+          memory: "170MB"
 
   api02:
     <<: *api
+    hostname: api02
     environment:
-      - WEB_CONCURRENCY=0
-      - RAILS_MAX_THREADS=5
-      - PORT=3002
-      - DB_HOSTNAME=host.docker.internal
-      - RINHA_DE_BACKEND_DATABASE_PASSWORD=postgres
-      - RAILS_MASTER_KEY=e6b1e1bd647883d4e9a2ee298c45b0e3
-    depends_on:
-      - api01 # Sometimes api dos not runs because rails db:prepare
+      <<: *env
+      PORT: 3002
     ports:
       - "3002:3002"
-    deploy:
-      resources:
-        limits:
-          cpus: "0.3"
-          memory: "120MB"
 
   nginx:
     image: nginx:latest
@@ -56,7 +50,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.2"
+          cpus: "0.1"
           memory: "50MB"
   db:
     image: postgres:latest
@@ -73,8 +67,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.7"
-          memory: "210MB"
+          cpus: "0.5"
+          memory: "160MB"
 
 networks:
   host:
